--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,15 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Great+Vibes" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 </head>
 
 	<style>
-		body {margin:0;}
+		body {
+			margin:0;
+			padding: 0;
+		}
 
 		ul {
 		    list-style-type: none;
@@ -44,26 +49,29 @@
 		.active {
 		    background-color: #3b2c85;
 		}
+
+		h3 {
+			font-family: 'Alegreya Sans SC', sans-serif;
+		    font-size: xx-large;
+		}
 	</style>
 <body>
 	<nav class="nav navbar-nav navbar-fixed-top">
 		<ul class="nav navbar-nav">
-		  <li><a href="#home"><img src="https://66.media.tumblr.com/b4209e69b49da0c22aa50b3b92836824/tumblr_ppcdun8CMZ1srjdm2o1_500.png" style="width: 81px; height: 58px;"></a></li>
-		  <li><a href="#news">Acerca de</a></li>
+		  <li><a href=""><img src="https://66.media.tumblr.com/b4209e69b49da0c22aa50b3b92836824/tumblr_ppcdun8CMZ1srjdm2o1_500.png" style="width: 81px; height: 58px;"><span class="sr-only">(current)</span></a></li>
+		  <li><a href="#about">Acerca de</a></li>
 		  <li><a href="#contact">Contacto</a></li>
 		  <li style="float: right;"><a href="#about">Iniciar sesión <span class="glyphicon glyphicon-log-in"></span></a></li>
+		  <li style="float: right;"><a href="#about">Registrarse <span class="glyphicon glyphicon-user"></span></a></li>
 		</ul>
 	</nav>
 
-	<div class="container" style="padding:20px;margin-top:60px;height:1500px;">
+	<div class="container" style="padding:20px;margin-top:60px;height: 100%;">
 	  <div class="row">
-	    <div class="col-md-8">
-	      <h3>Acerca de</h3>
-	      <h3>Contacto</h3>
-	    </div>
-	    <div class="col-md-4">
-	      <h3>Registro</h3>
-	    </div>
+	    <div class="col-md-12">
+	      	{% block content %}
+
+	      	{% endblock %}
 	  </div>
 	</div>
 </body>
