--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% include "navbar-sesion.html" %}
+<div style="margin-top: 60px">
 <form action="" method="post">
     {% csrf_token %}
     {{ formularioForm }}
     {{ materiasForm }}
     {{ habilidadesForm }}
+    
     <input type="submit" value="Submit">
 </form>
+</div>
 {% endblock %}
