--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% include "navbar-inicio.html" %}
 	<h3 style="text-align: center;" id="about">Acerca de</h3>
 	<p style="text-align:justify; font-family: 'Montserrat', sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ornare feugiat purus quis auctor. Phasellus sit amet ultricies leo. Curabitur aliquam, lorem id pharetra cursus, libero nisi posuere tortor, id luctus justo mauris vitae felis. Proin orci purus, laoreet sit amet nibh ultrices, blandit facilisis felis. Nam tempus nulla sed pharetra laoreet. Sed dignissim, arcu vitae suscipit commodo, ante nunc convallis nibh, a dignissim neque lorem id augue. Aliquam et quam nec sapien blandit imperdiet quis in arcu. Duis aliquet libero a elit venenatis dictum. Cras volutpat at lorem ac tempus. Pellentesque felis nisi, dapibus sed felis vel, ornare iaculis diam. Quisque mattis, mauris fringilla maximus accumsan, velit ligula auctor massa, id varius magna turpis sit amet justo. Ut justo ligula, interdum et quam sed, ornare placerat arcu. Quisque posuere neque in nunc pulvinar maximus. Sed volutpat sapien orci, tempus mattis massa lobortis quis.</p>
 
