--- a/templates/navbar-inicio.html
+++ b/templates/navbar-inicio.html
@@ -5,7 +5,7 @@
 		  <li><a href="#about">Acerca de</a></li>
 		  <li><a href="#contact">Contacto</a></li>
 		  <li style="float: right;"><a href="#about">Iniciar sesión <span class="glyphicon glyphicon-log-in"></span></a></li>
-		  <li style="float: right;"><a href="#about">Registrarse <span class="glyphicon glyphicon-user"></span></a></li>
+		  <li style="float: right;"><a href="/usuario/registro/">Registrarse <span class="glyphicon glyphicon-user"></span></a></li>
 		</ul>
 	</nav>
 {% endblock %}
