--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,102 @@
 	<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Great+Vibes" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+       
+<meta 
+http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="googlebot" content="noimageindex">
+        <base href=" " />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+	<link href="/components/com_k2/css/k2.css?v=2.9.0" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+	<link href="/plugins/system/helix/css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<link href="//fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css" />
+	<link href="/plugins/system/helix/css/mobile-menu.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/template.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/presets/isis.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/font-awesome-alt.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/custom.css" rel="stylesheet" type="text/css" />
+	<link href="/templates/shaper_helix_ii/css/custom-fonts.css" rel="stylesheet" type="text/css" />
+	<link href="/modules/mod_accordeonck/themes/simple/mod_accordeonck_css.php?cssid=isis" rel="stylesheet" type="text/css" />
+	<link href="/media/mod_languages/css/template.css?f5a949c6fec0e5f648f5f408c99fbc9c" rel="stylesheet" type="text/css" />
+	<style type="text/css">
+.container{max-width:940px}
+#sp-logo-wrapper{background: rgb(255, 255, 255) !important; padding: 20 !important; }
+
+#sp-logo-phone-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-menuredes-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-header-wrapper{background: rgb(255, 255, 255) !important; color: rgb(28, 28, 26) !important; }
+
+#sp-header-wrapper a{color: rgb(80, 191, 213) !important; }
+
+#sp-header-wrapper a:hover{color: rgb(61, 148, 181) !important; }
+
+#sp-feature-wrapper{padding: 0 !important; }
+
+#sp-breadcrumb-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-main-body-wrapper{background: rgb(255, 255, 255) !important; padding: 30px 0 !important; }
+
+#sp-logo-wrapper{background: rgb(255, 255, 255) !important; padding: 20 !important; }
+
+#sp-logo-phone-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-menuredes-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-header-wrapper{background: rgb(255, 255, 255) !important; color: rgb(28, 28, 26) !important; }
+
+#sp-header-wrapper a{color: rgb(80, 191, 213) !important; }
+
+#sp-header-wrapper a:hover{color: rgb(61, 148, 181) !important; }
+
+#sp-feature-wrapper{padding: 0 !important; }
+
+#sp-breadcrumb-wrapper{background: rgb(255, 255, 255) !important; }
+
+#sp-main-body-wrapper{background: rgb(255, 255, 255) !important; padding: 30px 0 !important; }
+
+#sp-footer-wrapper{background: rgb(28, 28, 26) !important; color: rgb(255, 251, 251) !important; padding: 30px 0 !important; }
+
+#isis li > .accordeonck_outer .toggler_icon  { outline: none;background: url(/images/iconos/Down-16.png) right center no-repeat !important; }
+#isis li.open > .accordeonck_outer .toggler_icon { background: url(/images/iconos/Up-16.png) right center no-repeat !important; }
+#isis li ul li ul li ul { border:none !important; padding-top:0px !important; padding-bottom:0px !important; }
+#isis { padding: 5px;padding: 5px;padding: 5px;padding: 5px;margin: 0px;margin: 0px;margin: 0px;margin: 0px;background: #FFFFFF;background-color: #FFFFFF;-moz-border-radius: 5px 5px 5px 5px;-webkit-border-radius: 5px 5px 5px 5px;border-radius: 5px 5px 5px 5px; } 
+#isis li.parent > span { display: block; position: relative; }
+#isis li.parent > span span.toggler_icon { position: absolute; cursor: pointer; display: block; height: 100%; z-index: 10;right:0; background: none;width: 20px;}
+#isis li.level1 { padding: 0px;padding: 0px;padding: 0px;padding: 0px;margin: 0px;margin: 0px;margin: 0px;margin: 0px;-moz-border-radius: 0px 0px 0px 0px;-webkit-border-radius: 0px 0px 0px 0px;border-radius: 0px 0px 0px 0px;-moz-box-shadow: none;-webkit-box-shadow: none;box-shadow: none; } 
+#isis li.level1 > .accordeonck_outer a { color: #50BFD5;font-size: 12px; } 
+#isis li.level1 > .accordeonck_outer a:hover { color: #3D94B5; } 
+#isis li.level1 > .accordeonck_outer a span.accordeonckdesc { font-size: 10px; } 
+#isis li.level2 { padding: 0px;padding: 0px;padding: 0px;padding: 0px;margin: 0px;margin: 0px;margin: 0px;margin: 0px;-moz-border-radius: 0px 0px 0px 0px;-webkit-border-radius: 0px 0px 0px 0px;border-radius: 0px 0px 0px 0px;-moz-box-shadow: none;-webkit-box-shadow: none;box-shadow: none; } 
+#isis li.level2 > .accordeonck_outer a { color: #1C1C1A;font-size: 12px; } 
+#isis li.level2 > .accordeonck_outer a:hover {  } 
+#isis li.level2 > .accordeonck_outer a span.accordeonckdesc { font-size: 10px; } 
+#isis li.level3 { padding: 0px;padding: 0px;padding: 0px;padding: 0px;margin: 0px;margin: 0px;margin: 0px;margin: 0px;-moz-border-radius: 0px 0px 0px 0px;-webkit-border-radius: 0px 0px 0px 0px;border-radius: 0px 0px 0px 0px; } 
+#isis li.level3 .accordeonck_outer a { color: #1C1C1A;font-size: 12px; } 
+#isis li.level3 .accordeonck_outer a:hover {  } 
+#isis li.level3 .accordeonck_outer a span.accordeonckdesc { font-size: 10px; } 
+	</style>
+	<script src="/media/jui/js/jquery.min.js?f5a949c6fec0e5f648f5f408c99fbc9c" type="text/javascript"></script>
+	<script src="/media/jui/js/jquery-noconflict.js?f5a949c6fec0e5f648f5f408c99fbc9c" type="text/javascript"></script>
+	<script src="/media/jui/js/jquery-migrate.min.js?f5a949c6fec0e5f648f5f408c99fbc9c" type="text/javascript"></script>
+	<script src="/media/k2/assets/js/k2.frontend.js?v=2.9.0&amp;sitepath=/" type="text/javascript"></script>
+	<script src="/media/jui/js/bootstrap.min.js?f5a949c6fec0e5f648f5f408c99fbc9c" type="text/javascript"></script>
+	<script src="/plugins/system/helix/js/jquery-noconflict.js" type="text/javascript"></script>
+	<script src="/plugins/system/helix/js/modernizr-2.6.2.min.js" type="text/javascript"></script>
+	<script src="/plugins/system/helix/js/helix.core.js" type="text/javascript"></script>
+	<script src="/plugins/system/helix/js/menu.js" type="text/javascript"></script>
+	<script src="/templates/shaper_helix_ii/js/Chart.js" type="text/javascript"></script>
+	<script src="/templates/shaper_helix_ii/js/list.js" type="text/javascript"></script>
+	<script src="/templates/shaper_helix_ii/js/jq-sticky-anything.js" type="text/javascript"></script>
+	<script src="/templates/shaper_helix_ii/js/custom.js" type="text/javascript"></script>
+	<script src="/media/jui/js/jquery.ui.core.min.js?f5a949c6fec0e5f648f5f408c99fbc9c" type="text/javascript"></script>
+	<script src="/modules/mod_accordeonck/assets/mod_accordeonck.js" type="text/javascript"></script>
+	<script src="/modules/mod_accordeonck/assets/jquery.easing.1.3.js" type="text/javascript"></script>
 
 </head>
-
 	<style>
 		body {
 			margin:0;
